New key binding syntax and a mostly rewritten parser.
- Use standard X key names on host side
- Use model-defined names on calculator side
- Multiple calculator keys separated by ','
- Host keys may be preceded by a list of modifiers, separated by '+'



git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@256 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/keybindings.ini
+++ b/gui/keybindings.ini
@@ -1,42 +1,131 @@
 [ti83]
-GDK_A=TILEM_KEY_ALPHA:TILEM_KEY_MATH
-GDK_B=TILEM_KEY_ALPHA:TILEM_KEY_MATRIX
-GDK_C=TILEM_KEY_ALPHA:TILEM_KEY_PRGM
-GDK_D=TILEM_KEY_ALPHA:TILEM_KEY_RECIP
-GDK_E=TILEM_KEY_ALPHA:TILEM_KEY_SIN
-GDK_F=TILEM_KEY_ALPHA:TILEM_KEY_COS
-GDK_G=TILEM_KEY_ALPHA:TILEM_KEY_TAN
-GDK_H=TILEM_KEY_ALPHA:TILEM_KEY_POWER
-GDK_I=TILEM_KEY_ALPHA:TILEM_KEY_SQUARE
-GDK_J=TILEM_KEY_ALPHA:TILEM_KEY_COMMA
-GDK_K=TILEM_KEY_ALPHA:TILEM_KEY_LPAREN
-GDK_L=TILEM_KEY_ALPHA:TILEM_KEY_RPAREN
-GDK_M=TILEM_KEY_ALPHA:TILEM_KEY_DIV
-GDK_N=TILEM_KEY_ALPHA:TILEM_KEY_LOG
-GDK_O=TILEM_KEY_ALPHA:TILEM_KEY_7
-GDK_P=TILEM_KEY_ALPHA:TILEM_KEY_8
-GDK_Q=TILEM_KEY_ALPHA:TILEM_KEY_9
-GDK_R=TILEM_KEY_ALPHA:TILEM_KEY_MUL
-GDK_S=TILEM_KEY_ALPHA:TILEM_KEY_LN
-GDK_T=TILEM_KEY_ALPHA:TILEM_KEY_4
-GDK_U=TILEM_KEY_ALPHA:TILEM_KEY_5
-GDK_V=TILEM_KEY_ALPHA:TILEM_KEY_6
-GDK_W=TILEM_KEY_ALPHA:TILEM_KEY_SUB
-GDK_X=TILEM_KEY_ALPHA:TILEM_KEY_STORE
-GDK_Y=TILEM_KEY_ALPHA:TILEM_KEY_1
-GDK_Z=TILEM_KEY_ALPHA:TILEM_KEY_2
-GDK_a=TILEM_KEY_ALPHA
-GDK_1=TILEM_KEY_1:
-GDK_2=TILEM_KEY_2
-GDK_3=TILEM_KEY_3
-GDK_4=TILEM_KEY_4
-GDK_5=TILEM_KEY_5
-GDK_6=TILEM_KEY_6
-GDK_7=TILEM_KEY_7
-GDK_8=TILEM_KEY_8
-GDK_9=TILEM_KEY_9
-GDK_0=TILEM_KEY_0
-GDK_Return=TILEM_KEY_1
-GDK_BackSpace=TILEM_KEY_LEFT:TILEM_KEY_DEL
-GDK_Escape=TILEM_KEY_2ND:TILEM_KEY_MODE
 
+F1 = YEqu
+F2 = Window
+F3 = Zoom
+F4 = Trace
+F5 = Graph
+
+Control_L = 2nd
+F6        = Mode
+Delete    = Del
+KP_Delete = Del
+
+Shift_L   = Alpha
+x         = Graphvar
+quoteleft = Graphvar
+s         = Stat
+
+Up        = Up
+KP_Up     = Up
+Down      = Down
+KP_Down   = Down
+Left      = Left
+KP_Left   = Left
+Right     = Right
+KP_Right  = Right
+
+m                 = Math
+a                 = Matrix
+F7                = Matrix
+Tab               = Prgm
+F8                = Prgm
+v                 = Vars
+F9                = Vars
+Escape            = Clear
+Page_Down         = Clear
+
+ampersand         = Recip
+End               = Recip
+exclam            = Recip
+e                 = Sin
+Insert            = Sin
+c                 = Cos
+Home              = Cos
+t                 = Tan
+Page_Up           = Tan
+asciicircum       = Power
+dead_circumflex   = Power
+
+semicolon         = Square
+twosuperior       = Square
+at                = Square
+comma             = Comma
+parenleft         = LParen
+bracketleft       = LParen
+parenright        = RParen
+bracketright      = RParen
+slash             = Div
+KP_Divide         = Div
+
+o                 = Log
+apostrophe        = Log
+7                 = 7
+KP_7              = 7
+8                 = 8
+KP_8              = 8
+9                 = 9
+KP_9              = 9
+asterisk          = Mul
+KP_Multiply       = Mul
+
+l                 = Ln
+backslash         = Ln
+4                 = 4
+KP_4              = 4
+5                 = 5
+KP_5              = 5
+6                 = 6
+KP_6              = 6
+minus             = Sub
+KP_Subtract       = Sub
+
+greater           = Store
+equal             = Store
+KP_Equal          = Store
+1                 = 1
+KP_1              = 1
+2                 = 2
+KP_2              = 2
+3                 = 3
+KP_3              = 3
+plus              = Add
+KP_Add            = Add
+
+BackSpace         = On
+0                 = 0
+KP_0              = 0
+period            = DecPnt
+KP_Decimal        = DecPnt
+underscore        = Chs
+Shift+KP_Subtract = Chs
+Return            = Enter
+KP_Enter          = Enter
+
+A     = Alpha, Math
+B     = Alpha, Matrix
+C     = Alpha, Prgm
+D     = Alpha, Recip
+E     = Alpha, Sin
+F     = Alpha, Cos
+G     = Alpha, Tan
+H     = Alpha, Power
+I     = Alpha, Square
+J     = Alpha, Comma
+K     = Alpha, LParen
+L     = Alpha, RParen
+M     = Alpha, Div
+N     = Alpha, Log
+O     = Alpha, 7
+P     = Alpha, 8
+Q     = Alpha, 9
+R     = Alpha, Mul
+S     = Alpha, Ln
+T     = Alpha, 4
+U     = Alpha, 5
+V     = Alpha, 6
+W     = Alpha, Sub
+X     = Alpha, Store
+Y     = Alpha, 1
+Z     = Alpha, 2
+space = Alpha, 0
