Allow to choose keybindings filename (path) in config.ini. Add/Modif some keybindings
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@257 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/config.ini
+++ b/gui/config.ini
@@ -3,6 +3,7 @@
 auto_save=false
 grayscale=true
 limit_speed=true
+#keybindings=/home/tib/Code/tilem252/trunk/gui/keybindings.ini
 
 [recent]
 rom0=test2
