--- a/gui/keybindings.ini
+++ b/gui/keybindings.ini
@@ -37,8 +37,8 @@ Page_Down         = Clear
 
 ampersand         = Recip
 End               = Recip
-exclam            = Recip
-e                 = Sin
+exclam            = Math, Left, 4
+e                 = 2nd, Ln
 Insert            = Sin
 c                 = Cos
 Home              = Cos
@@ -48,6 +48,7 @@ asciicircum       = Power
 dead_circumflex   = Power
 
 semicolon         = Square
+colon		  = Alpha, DecPnt
 twosuperior       = Square
 at                = Square
 comma             = Comma
@@ -81,7 +82,7 @@ minus             = Sub
 KP_Subtract       = Sub
 
 greater           = Store
-equal             = Store
+equal             = 2nd, Math, 1
 KP_Equal          = Store
 1                 = 1
 KP_1              = 1
@@ -92,7 +93,7 @@ KP_3              = 3
 plus              = Add
 KP_Add            = Add
 
-BackSpace         = On
+BackSpace         = Left, Del
 0                 = 0
 KP_0              = 0
 period            = DecPnt
@@ -101,6 +102,9 @@ underscore        = Chs
 Shift+KP_Subtract = Chs
 Return            = Enter
 KP_Enter          = Enter
+
+percent		  = 2nd, 0, Ln, Down, Down, Down, Down, Down, Down, Down, Down, Enter, 9
+
 
 A     = Alpha, Math
 B     = Alpha, Matrix
