--- a/gui/Makefile
+++ b/gui/Makefile
@@ -20,8 +20,7 @@ TILEMCORE_LIBS = -L$(top_builddir)/core -ltilemcore
 TILEMDB_CFLAGS = -I$(top_srcdir)/db
 TILEMDB_LIBS = -L$(top_builddir)/db -ltilemdb
 
-GTK3_MIGRATION = -DGTK_DISABLE_SINGLE_INCLUDES -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED 
-#-DGSEAL_ENABLE
+GTK3_MIGRATION = -DGTK_DISABLE_SINGLE_INCLUDES -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE
 
 objects = tilem2.o \
 	animatedgif.o \
