Add configure script.
Some stuff isn't working yet:
- VPATH builds won't work because of wildcard dependencies in
  gui/Makefile.in
- configure will detect calcprotocols, but compatibility headers are
  missing
- Qt GUI isn't yet integrated in any way
- and lots more Makefile stuff yet to do (install, uninstall, dist)



git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@275 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/db/Makefile.in
+++ b/db/Makefile.in
@@ -1,12 +1,23 @@
-AR = ar
-CC = gcc
-CFLAGS = -g -O2 -W -Wall -Wwrite-strings
-DEFS = -DPACKAGE_VERSION=\"pre-release\"
-RANLIB = ranlib
+prefix = @prefix@
+exec_prefix = @exec_prefix@
+datarootdir = @datarootdir@
+bindir = @bindir@
+datadir = @datadir@
+pkgdatadir = @datadir@/@PACKAGE_TARNAME@
+mandir = @mandir@
 
-srcdir = .
-top_srcdir = ..
-top_builddir = ..
+top_builddir = @top_builddir@
+top_srcdir = @top_srcdir@
+srcdir = @srcdir@
+VPATH = @srcdir@
+@SET_MAKE@
+
+AR = @AR@
+CC = @CC@
+CFLAGS = @CFLAGS@
+CPPFLAGS = @CPPFLAGS@
+DEFS = @DEFS@
+RANLIB = @RANLIB@
 
 objects = disasm.o listing.o lstfile.o
 
