--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -1,26 +1,36 @@
-AR = ar
-CC = gcc
-CFLAGS = -g -W -Wall -DD1
-DEFS = -DPACKAGE_VERSION=\"pre-release\"
-RANLIB = ranlib
+prefix = @prefix@
+exec_prefix = @exec_prefix@
+datarootdir = @datarootdir@
+bindir = @bindir@
+datadir = @datadir@
+pkgdatadir = @datadir@/@PACKAGE_TARNAME@
+mandir = @mandir@
 
-srcdir = .
-top_srcdir = ..
-top_builddir = ..
+top_builddir = @top_builddir@
+top_srcdir = @top_srcdir@
+srcdir = @srcdir@
+VPATH = @srcdir@
+@SET_MAKE@
 
-GTK_CFLAGS = `pkg-config --cflags gtk+-2.0 gthread-2.0 glib-2.0`
-GTK_LIBS = `pkg-config --libs gtk+-2.0 gthread-2.0 glib-2.0`
+CC = @CC@
+CFLAGS = @CFLAGS@
+CPPFLAGS = @CPPFLAGS@
+DEFS = @DEFS@
+GUI_LDFLAGS = @LDFLAGS@
+LDFLAGS = @LDFLAGS@
+LIBS = @LIBS@
 
-TICALCS_CFLAGS = `pkg-config --cflags ticalcs2 ticonv`
-TICALCS_LIBS = `pkg-config --libs ticalcs2 ticonv`
+GTK_CFLAGS = @GTK_CFLAGS@
+GTK_LIBS = @GTK_LIBS@
+
+TICALCS_CFLAGS = @TICALCS_CFLAGS@
+TICALCS_LIBS = @TICALCS_LIBS@
 
 TILEMCORE_CFLAGS = -I$(top_srcdir)/emu
 TILEMCORE_LIBS = -L$(top_builddir)/emu -ltilemcore
 
 TILEMDB_CFLAGS = -I$(top_srcdir)/db
 TILEMDB_LIBS = -L$(top_builddir)/db -ltilemdb
-
-GTK3_MIGRATION = -DGTK_DISABLE_SINGLE_INCLUDES -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGSEAL_ENABLE
 
 objects = tilem2.o \
 	animatedgif.o \
@@ -45,13 +55,17 @@ objects = tilem2.o \
 
 libs = $(TILEMDB_LIBS) $(TILEMCORE_LIBS) $(GTK_LIBS) $(TICALCS_LIBS) $(LIBS)
 
-compile = $(CC) -I$(srcdir) $(CFLAGS) $(DEFS) $(TILEMCORE_CFLAGS) $(TILEMDB_CFLAGS) $(GTK_CFLAGS) $(TICALCS_CFLAGS) $(GTK3_MIGRATION)
+compile = $(CC) -I$(srcdir) $(CFLAGS) $(DEFS) \
+	$(TILEMCORE_CFLAGS) $(TILEMDB_CFLAGS) \
+	$(GTK_CFLAGS) $(TICALCS_CFLAGS)
 
-all: tilem2
+link = $(CC) $(CFLAGS) $(LDFLAGS) $(GUI_LDFLAGS)
+
+all: tilem2@EXEEXT@
 
 #Main emulator GUI
-tilem2: $(objects) ../emu/libtilemcore.a
-	$(CC) $(CFLAGS) $(LDFLAGS) -o tilem2 $(objects) $(libs)
+tilem2@EXEEXT@: $(objects) ../emu/libtilemcore.a
+	$(link) -o tilem2@EXEEXT@ $(objects) $(libs)
 
 tilem2.o: tilem2.c gui.h *.h ../emu/tilem.h
 	$(compile) -c $(srcdir)/tilem2.c
@@ -141,6 +155,6 @@ install: testemu2
 	./install.sh
 clean:
 	rm -f *.o
-	rm -f tilem2
+	rm -f tilem2@EXEEXT@
 
 .PHONY: all clean
