Add dependency on config.h
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@281 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/db/Makefile.in
+++ b/db/Makefile.in
@@ -31,15 +31,15 @@ libtilemdb.a: $(objects)
 
 # Disassembler
 
-disasm.o: disasm.c tilemdb.h ../emu/tilem.h
+disasm.o: disasm.c tilemdb.h ../emu/tilem.h ../config.h
 	$(compile) -c $(srcdir)/disasm.c
 
 # Listing file management
 
-listing.o: listing.c tilemdb.h ../emu/tilem.h
+listing.o: listing.c tilemdb.h ../emu/tilem.h ../config.h
 	$(compile) -c $(srcdir)/listing.c
 
-lstfile.o: lstfile.c tilemdb.h ../emu/tilem.h
+lstfile.o: lstfile.c tilemdb.h ../emu/tilem.h ../config.h
 	$(compile) -c $(srcdir)/lstfile.c
 
 
