Use get_shared_file_path() for keybindings.ini
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@282 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -151,7 +151,7 @@ files.o: files.c files.h
 	$(compile) $(DEF_SHARE_DIR) -c $(srcdir)/files.c
 
 # Keybindings
-keybindings.o: keybindings.c $(common_headers)
+keybindings.o: keybindings.c files.h $(common_headers)
 	$(compile) -c $(srcdir)/keybindings.c
 
 
