Clean up config.ini handling a little bit. - Use get_shared_file_path() / get_config_file_path() - add new key_file_set_filename() / key_file_get_filename() for   storing filenames in a GKeyFile
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@283 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -114,7 +114,7 @@ tool.o: tool.c $(common_headers)
 	$(compile) -c $(srcdir)/tool.c
 
 # Manage config.ini 
-config.o: config.c $(common_headers)
+config.o: config.c files.h $(common_headers)
 	$(compile) -c $(srcdir)/config.c
 
 # Handle internal link
