Display an icon indicating the current PC in disassembly. Also, set up some infrastructure for future custom icons. Also, ensure disasm view locks calculator before using it.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@301 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -45,6 +45,7 @@ objects = tilem2.o \
 	event.o \
 	files.o \
 	gifencod.o \
+	icons.o \
 	keybindings.o \
 	link.o \
 	macro.o \
@@ -75,7 +76,7 @@ all: tilem2@EXEEXT@
 tilem2@EXEEXT@: $(objects) ../emu/libtilemcore.a
 	$(link) -o tilem2@EXEEXT@ $(objects) $(libs)
 
-tilem2.o: tilem2.c $(common_headers)
+tilem2.o: tilem2.c icons.h $(common_headers)
 	$(compile) -c $(srcdir)/tilem2.c
 
 # Debugger
@@ -154,6 +155,10 @@ pbar.o: pbar.c $(common_headers)
 # Shared/configuration files
 files.o: files.c files.h
 	$(compile) $(DEF_SHARE_DIR) -c $(srcdir)/files.c
+
+# Custom icons
+icons.o: icons.c icons.h
+	$(compile) $(DEF_SHARE_DIR) -c $(srcdir)/icons.c
 
 # Keybindings
 keybindings.o: keybindings.c files.h $(common_headers)
