--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -57,6 +57,7 @@ objects = tilem2.o \
 	skin.o \
 	skinops.o \
 	ti81prg.o \
+	menu.o \
 	tool.o
 
 libs = $(TILEMDB_LIBS) $(TILEMCORE_LIBS) $(GTK_LIBS) $(TICALCS_LIBS) $(LIBS)
@@ -163,6 +164,11 @@ icons.o: icons.c icons.h
 # Keybindings
 keybindings.o: keybindings.c files.h $(common_headers)
 	$(compile) -c $(srcdir)/keybindings.c
+
+# Menu
+menu.o: menu.c $(common_headers)
+	$(compile) -c $(srcdir)/menu.c
+
 
 
 # TI-81 program file functions
