Rework grayscale and image-rendering API.
Rather than using the same TilemGrayLCD object for both grayscale
processing and image scaling, a new TilemLCDBuffer object is used for
the latter functions.

This allows the GUI to use the same API for rendering both monochrome
and grayscale output; it clearly separates the data structures used by
the various functions; and it gives the GUI access to the computed LCD
state (which will be needed for better screenshot and animation
support.)


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@342 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/emu/Makefile.in
+++ b/emu/Makefile.in
@@ -21,7 +21,7 @@ OPT_CFLAGS = @OPT_CFLAGS@
 RANLIB = @RANLIB@
 
 core_objects = calcs.o z80.o state.o rom.o flash.o link.o keypad.o lcd.o \
-	cert.o md5.o timers.o graylcd.o grayimage.o graycolor.o
+	cert.o md5.o timers.o monolcd.o graylcd.o grayimage.o graycolor.o
 
 x7_objects = x7_init.o x7_io.o x7_memory.o x7_subcore.o
 x1_objects = x1_init.o x1_io.o x1_memory.o x1_subcore.o
@@ -71,6 +71,8 @@ md5.o: md5.c tilem.h ../config.h
 	$(compile) -c $(srcdir)/md5.c
 timers.o: timers.c tilem.h ../config.h
 	$(compile) -c $(srcdir)/timers.c
+monolcd.o: monolcd.c tilem.h ../config.h
+	$(compile) -c $(srcdir)/monolcd.c
 graylcd.o: graylcd.c tilem.h graylcd.h ../config.h
 	$(compile) -c $(srcdir)/graylcd.c
 grayimage.o: grayimage.c tilem.h graylcd.h ../config.h
